# SeedUI

./: .gitignore  LICENSE  README.md  rustfmt.toml
config/: Cargo.toml
config/src/: lib.rs
config/test_data/: test_config_1.ron  test_config_2.ron  test_config_3.ron
custom_types/: Cargo.toml
custom_types/src/: lib.rs
docs/: aflplusplus.md  honggfuzz.md
examples/: extract_binary_traces_general.py  readelf.ron
examples/readelf/: docker-compose.yaml  extract_binary_traces.py
examples/readelf/docker/: Dockerfile.readelf  readelf.sh  readelf_afl.sh  readelf_hfuzz.sh
examples/readelf/local/: compile_binutils_debug.sh
inputs_database/: Cargo.toml
inputs_database/src/: lib.rs
server/: Cargo.toml
server/src/: app_state.rs  main.rs  responders.rs
sut_database/: Cargo.toml
sut_database/src/: lib.rs
sut_database/test_data/test2/: main.c
test_data/kinda_maze/: extract_binary_traces.py  fuzz.sh  make.sh
test_data/kinda_maze/inputs/: seed0  seed1  seed2  seed3  seed4
test_data/kinda_maze/sources/: test_maze.c  test_maze.h
test_data/test1/: extract_binary_traces.py  fuzz.sh  make.sh
test_data/test1/fuzzer_queue/: cycle:2,id:000005,executed_on:1753701941381,src:000002,time:455,execs:880,op:havoc,rep:1,gain:1,score:200,depth:2,bitmap_cvg:0.02,edges_found:123  (+4 more)
trace_map/: Cargo.toml
trace_map/src/: drcov.rs  lib.rs  trace_loader.rs
trace_map/test_data/: extract_binary_traces.py
trace_map/test_data/sources/: make.sh  test.c
trace_map/test_data/sources/inputs/: drcov_input_c
web/: .gitignore  package.json
web/app/: global.css  layout.js
(+16 files in other folders)
