[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
glob = "0.3.2"
chrono = { version = "0.4.41", features = ["serde"] }

config = { path = "../config" }
custom_types = { path = "../custom_types" }
sut_database = { path = "../sut_database" }
inputs_database = { path = "../inputs_database" }