[package]
name = "trace_map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
addr2line = "0.24.2"
log = "0.4.25"
rangemap = "1.5.1"

config = { path="../config" }
custom_types = { path="../custom_types" }
sut_database = { path="../sut_database" }